tests/tests/snapshots/test__typescript__ts-export-to-moduleprefixedname-serde.snap
---
source: tests/tests/typescript.rs
expression: output
---
ERROR: Unresolved generic reference 'GenericReference { id: TypeId(0x152093cb23dc647ff5410b12a8b1adc8) }' while validating 'InlineGenericNewtype[0].<generic_ref>'
