tests/tests/snapshots/test__typescript__ts-export-to-moduleprefixedname-serde_phases.snap
---
source: tests/tests/typescript.rs
expression: output
---
ERROR: Unresolved generic reference 'GenericReference { id: TypeId(0xb60e6ee33df40e65e3871226f909452f) }' while validating 'Vec.<list_item>.<generic_ref>'
