tests/tests/snapshots/test__typescript__ts-export-to-moduleprefixedname-serialize.snap
---
source: tests/tests/typescript.rs
expression: fs_to_string(&path).unwrap()
---
ts-export-to-moduleprefixedname-serialize (15788 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.

export type test_types_A = { 
		a: test_types_B,
		b: test_types_B,
		c: test_types_B,
		d: test_types_D,
		e: test_types_GenericFlattened<number>,
	};

export type test_types_AGenericStruct<T> = { 
		field: test_types_Demo<T, boolean>,
	};

export type test_types_ActualType = { 
		a: test_types_GenericType<string>,
	};

export type test_types_B = { 
		b: number,
	};

export type test_types_BasicEnum = "A" | "B";

export type test_types_BoxFlattened = { 
		b: test_types_BoxedInner,
	};

export type test_types_BoxInline = { 
		c: test_types_BoxedInner,
	};

export type test_types_BoxedInner = { 
		a: number,
	};

export type test_types_BracedStruct = string;

/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
export type test_types_CommentedEnum = 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
{ A: number } | 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
{ B: { 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
a: number } };

/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
export type test_types_CommentedStruct = { 
		
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
a: number,
	};

export type test_types_D = { 
		flattened: number,
	};

export type test_types_Demo<A, B> = { 
		a: A,
		b: B,
	};

export type test_types_DeprecatedEnumVariants = 
	/**
 * @deprecated
 */
"A" | 
	/**
 * @deprecated Nope
 */
"B" | 
	/**
 * @deprecated Nope
 */
"C";

export type test_types_DeprecatedFields = { 
		a: number,
		
	/**
 * @deprecated
 */
b: string,
		
	/**
 * @deprecated This field is cringe!
 */
c: string,
		
	/**
 * @deprecated This field is cringe!
 */
d: string,
	};

export type test_types_DeprecatedTupleVariant = [
	/**
 * @deprecated
 */
string, 
	/**
 * @deprecated Nope
 */
string, 
	/**
 * @deprecated Nope
 */
number];

/**
 * @deprecated
 */
export type test_types_DeprecatedType = { 
		a: number,
	};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type test_types_DeprecatedTypeWithMsg = { 
		a: number,
	};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type test_types_DeprecatedTypeWithMsg2 = { 
		a: number,
	};

export type test_types_DoubleFlattened = { 
		a: test_types_ToBeFlattened,
		b: test_types_ToBeFlattened,
	};

export type test_types_Eight = { A: string } | "B";

export type test_types_EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };

export type test_types_EnumReferenceRecordKey = { 
		a: Partial<{ [key in test_types_BasicEnum]: number }>,
	};

export type test_types_EnumRenameAllUppercase = "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS";

export type test_types_ExtraBracketsInTupleVariant = { A: string };

export type test_types_ExtraBracketsInUnnamedStruct = string;

export type test_types_First = { 
		a: string,
	};

export type test_types_FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

export type test_types_FlattenEnumStruct = (test_types_FlattenEnum) & { 
		outer: string,
	};

export type test_types_FlattenOnNestedEnum = (test_types_NestedEnum) & { 
		id: string,
	};

export type test_types_FlattenedInner = { 
		c: test_types_Inner,
	};

export type test_types_Fourth = { 
		a: test_types_First,
		b: test_types_First,
	};

export type test_types_GenericFlattened<T> = { 
		generic_flattened: T,
	};

export type test_types_GenericStruct<T> = { 
		arg: T,
	};

export type test_types_GenericTupleStruct<T> = T;

export type test_types_GenericType<T> = "Undefined" | T;

export type test_types_HasGenericAlias = { [key in number]: string };

export type test_types_InlineEnumField = { A: test_types_PlaceholderInnerField };

export type test_types_InlineOptionalType = { 
		optional_field: test_types_PlaceholderInnerField | null,
	};

export type test_types_InlineStruct = { 
		ref_struct: test_types_SimpleStruct,
		val: number,
	};

export type test_types_InlineTuple = { 
		demo: [string, boolean],
	};

export type test_types_InlineTuple2 = { 
		demo: [test_types_InlineTuple, boolean],
	};

export type test_types_InlinerStruct = { 
		inline_this: test_types_InlineStruct,
		dont_inline_this: test_types_RefStruct,
	};

export type test_types_Inner = { 
		a: number,
		b: test_types_FlattenedInner,
	};

export type test_types_InvalidToValidType = { 
		cause: null | null,
	};

export type test_types_Issue281 = { 
		default_unity_arguments: string[],
	};

/**
 * https://github.com/specta-rs/specta/issues/374
 */
export type test_types_Issue374 = { 
		foo: boolean,
		bar: boolean,
	};

export type test_types_KebabCase = { 
		"test-ing": string,
	};

export type test_types_MacroEnum = { Demo: string } | { Demo2: { demo2: string } };

export type test_types_MacroStruct = string;

export type test_types_MacroStruct2 = { 
		demo: string,
	};

export type test_types_MyEmptyInput = Record<string, never>;

export type test_types_MyEnum = { A: string } | { B: number };

export type test_types_MyEnumAdjacent = { t: "Variant"; c: (test_types_First) };

export type test_types_MyEnumExternal = { Variant: (test_types_First) };

export type test_types_MyEnumTagged = (test_types_First) & { type: "Variant" };

export type test_types_MyEnumUntagged = (test_types_First);

export type test_types_NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

export type test_types_NonOptional = string | null;

export type test_types_Optional = { 
		a: number | null,
		b?: number | null,
		c: string | null,
		d: boolean,
	};

export type test_types_OptionalInEnum = { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } };

export type test_types_OptionalOnNamedField = string | null;

export type test_types_OptionalOnTransparentNamedField = { 
		b: string | null,
	};

export type test_types_OptionalOnTransparentNamedFieldInner = string | null;

export type test_types_OverridenStruct = { 
		overriden_field: string,
	};

export type test_types_PlaceholderInnerField = { 
		a: string,
	};

export type virtual_Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [[string, number], [boolean, string, boolean], null],
		"17": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": string,
		"20": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"21": { 
	secs: number,
	nanos: number,
},
		"22": string,
		"23": boolean,
		"24": number,
		"25": number[],
		"26": number[],
		"27": number[],
		"28": number[],
		"29": test_types_MyEnum[],
		"2a": test_types_MyEnum[],
		"2b": test_types_MyEnum[],
		"2c": test_types_MyEnum[],
		"2d": number[],
		"2e": number[],
		"2f": number | null,
		"30": null | null,
		"31": number[] | null,
		"32": string | null,
		"33": string | null,
		"34": test_types_Unit1,
		"35": test_types_Unit2,
		"36": test_types_Unit3,
		"37": test_types_Unit4,
		"38": test_types_Unit5,
		"39": test_types_Unit6,
		"3a": test_types_Unit7,
		"3b": test_types_SimpleStruct,
		"3c": test_types_TupleStruct1,
		"3d": test_types_TupleStruct3,
		"3e": test_types_TestEnum,
		"3f": test_types_RefStruct,
		"40": test_types_InlinerStruct,
		"41": test_types_GenericStruct<number>,
		"42": test_types_GenericStruct<string>,
		"43": test_types_FlattenEnumStruct,
		"44": test_types_OverridenStruct,
		"45": test_types_HasGenericAlias,
		"46": test_types_SkipVariant,
		"47": test_types_SkipVariant2,
		"48": test_types_SkipVariant3,
		"49": test_types_SkipStructFields,
		"4a": test_types_SpectaSkipNonTypeField,
		"4b": test_types_EnumMacroAttributes,
		"4c": test_types_InlineEnumField,
		"4d": test_types_InlineOptionalType,
		"4e": test_types_Rename,
		"4f": test_types_TransparentType,
		"50": test_types_TransparentType2,
		"51": test_types_TransparentTypeWithOverride,
		"52": (number | null)[],
		"53": Partial<{ [key in test_types_BasicEnum]: null }>,
		"54": number | null,
		"55": test_types_PlaceholderInnerField[],
		"56": Partial<{ [key in test_types_BasicEnum]: number }>,
		"57": test_types_EnumReferenceRecordKey,
		"58": test_types_FlattenOnNestedEnum,
		"59": null,
		"5a": null,
		"5b": never,
		"5c": test_types_MyEmptyInput,
		"5d": string,
		"5e": [string],
		"5f": test_types_ExtraBracketsInTupleVariant,
		"60": test_types_ExtraBracketsInUnnamedStruct,
		"61": test_types_MyEnum[],
		"62": test_types_InlineTuple,
		"63": test_types_InlineTuple2,
		"64": string,
		"65": string,
		"66": test_types_SkippedFieldWithinVariant,
		"67": test_types_KebabCase,
		"68": string[],
		"69": test_types_Issue281,
		"6a": test_types_RenameWithWeirdCharsField,
		"6b": test_types_RenameWithWeirdCharsVariant,
		"6c": test_types_Issue374,
		"6d": test_types_type_type_Type,
		"6e": test_types_ActualType,
		"6f": test_types_SpectaTypeOverride,
		"70": test_types_InvalidToValidType,
		"71": test_types_TupleStruct,
		"72": test_types_TupleStructWithRep,
		"73": test_types_GenericTupleStruct<string>,
		"74": test_types_BracedStruct,
		"75": test_types_StructRenameAllUppercase,
		"76": test_types_RenameSerdeSpecialChar,
		"77": test_types_EnumRenameAllUppercase,
		"78": test_types_Recursive,
		"79": test_types_RecursiveMapValue,
		"7a": test_types_RecursiveTransparent,
		"7b": test_types_RecursiveInEnum,
		"7c": test_types_NonOptional,
		"7d": test_types_OptionalOnNamedField,
		"7e": test_types_OptionalOnTransparentNamedField,
		"7f": test_types_OptionalInEnum,
		"80": test_types_Optional,
		"81": test_types_UntaggedVariants,
		"82": test_types_UntaggedVariantsWithoutValue,
		"83": { [key in string]: null },
		"84": test_types_Regular,
		"85": { [key in never]: null },
		"86": Partial<{ [key in test_types_UnitVariants]: null }>,
		"87": Partial<{ [key in test_types_UntaggedVariantsKey]: null }>,
		"88": Partial<{ [key in test_types_Variants]: null }>,
		"89": test_types_MacroStruct,
		"8a": test_types_MacroStruct2,
		"8b": test_types_MacroEnum,
		"8c": test_types_DeprecatedType,
		"8d": test_types_DeprecatedTypeWithMsg,
		"8e": test_types_DeprecatedTypeWithMsg2,
		"8f": test_types_DeprecatedFields,
		"90": test_types_DeprecatedTupleVariant,
		"91": test_types_DeprecatedEnumVariants,
		"92": test_types_CommentedStruct,
		"93": test_types_CommentedEnum,
		"94": test_types_SingleLineComment,
		"95": test_types_Demo<number, boolean>,
		"96": test_types_Demo<number, boolean>,
		"97": test_types_Demo<number, boolean>,
		"98": test_types_Demo<number, boolean>,
		"99": test_types_Demo<number, boolean>,
		"9a": { [key in string]: number },
		"9b": { [key in number]: string },
		"9c": { [key in string]: test_types_AGenericStruct<number> },
		"9d": test_types_AGenericStruct<number>,
		"9e": test_types_A,
		"9f": test_types_DoubleFlattened,
		a0: test_types_FlattenedInner,
		a1: test_types_BoxFlattened,
		a2: test_types_BoxInline,
		a3: test_types_First,
		a4: test_types_Second,
		a5: test_types_Third,
		a6: test_types_Fourth,
		a7: test_types_TagOnStructWithInline,
		a8: test_types_Sixth,
		a9: test_types_Seventh,
		aa: test_types_Eight,
		ab: test_types_Tenth,
		ac: test_types_MyEnumTagged,
		ad: test_types_MyEnumExternal,
		ae: test_types_MyEnumAdjacent,
		af: test_types_MyEnumUntagged,
	};

export type test_types_Recursive = { 
		demo: test_types_Recursive,
	};

export type test_types_RecursiveInEnum = { A: (test_types_RecursiveInEnum) };

export type test_types_RecursiveInline = (test_types_RecursiveInline);

export type test_types_RecursiveMapValue = { 
		demo: { [key in string]: test_types_RecursiveMapValue },
	};

export type test_types_RecursiveTransparent = test_types_RecursiveInline;

export type test_types_RefStruct = test_types_TestEnum;

export type test_types_Regular = { [key in string]: null };

export type test_types_Rename = "OneWord" | "Two words";

export type test_types_RenameSerdeSpecialChar = { 
		b: number,
	};

export type test_types_RenameWithWeirdCharsField = { 
		odata_context: string,
	};

export type test_types_RenameWithWeirdCharsVariant = { "@odata.context": string };

export type test_types_Second = { 
		a: number,
	};

export type test_types_Seventh = { 
		a: test_types_First,
		b: test_types_Second,
	};

export type test_types_SimpleStruct = { 
		a: number,
		b: string,
		c: [number, string, number],
		d: string[],
		e: string | null,
	};

/**
 * Some single-line comment
 */
export type test_types_SingleLineComment = 
	/**
 * Some single-line comment
 */
{ A: number } | 
	/**
 * Some single-line comment
 */
{ B: { 
	/**
 * Some single-line comment
 */
a: number } };

export type test_types_Sixth = { 
		a: test_types_First,
		b: test_types_First,
	};

export type test_types_SkipStructFields = { 
		a: number,
	};

export type test_types_SkipVariant = { A: string };

export type test_types_SkipVariant2 = { tag: "A"; data: string };

export type test_types_SkipVariant3 = { A: { a: string } };

export type test_types_SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };

export type test_types_SpectaSkipNonTypeField = { 
		a: number,
	};

export type test_types_SpectaTypeOverride = { 
		string_ident: string,
		u32_ident: number,
		path: string,
	};

export type test_types_StructRenameAllUppercase = { 
		A: number,
		B: number,
	};

export type test_types_TagOnStructWithInline = { 
		type: "TagOnStructWithInline",
		a: test_types_First,
		b: test_types_First,
	};

export type test_types_Tenth = string | "B" | test_types_First;

export type test_typescript_TestCollectionRegister = never;

export type test_types_TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

export type test_types_Third = (test_types_First) & { 
		b: { [key in string]: string },
		c: test_types_First,
	};

export type test_types_ToBeFlattened = { 
		a: string,
	};

export type test_types_TransparentType = test_types_TransparentTypeInner;

export type test_types_TransparentType2 = null;

export type test_types_TransparentTypeInner = { 
		inner: string,
	};

export type test_types_TransparentTypeWithOverride = string;

export type test_types_TupleStruct = string;

export type test_types_TupleStruct1 = number;

export type test_types_TupleStruct3 = [number, boolean, string];

export type test_types_TupleStructWithRep = string;

export type test_types_type_type_Type = never;

export type test_types_Unit1 = null;

export type test_types_Unit2 = Record<string, never>;

export type test_types_Unit3 = [];

export type test_types_Unit4 = null;

export type test_types_Unit5 = "A";

export type test_types_Unit6 = { A: [] };

export type test_types_Unit7 = { A: Record<string, never> };

export type test_types_UnitVariants = "A" | "B" | "C";

export type test_types_UntaggedVariants = string | number | { id: string } | [string, boolean];

export type test_types_UntaggedVariantsKey = string | number;

export type test_types_UntaggedVariantsWithoutValue = string | [number, string] | number;

export type test_types_selection_UserListSelection<name, age> = { 
		name: name,
		age: age,
	};

export type test_types_selection_UserSelection<name, age> = { 
		name: name,
		age: age,
	};

export type test_types_Variants = { A: string } | { B: number } | { C: number };
════════════════════════════════════════
