tests/tests/snapshots/test__typescript__ts-export-to-namespaces-serde_phases.snap
---
source: tests/tests/typescript.rs
expression: output
---
ERROR: Unresolved generic reference 'GenericReference { id: TypeId(0x55d77eafcfe339790741c15e996c11a8) }' while validating 'Vec.<list_item>.<generic_ref>'
